tests/core_functions/color/hsl/error/mod.rs
//! Tests auto-converted from "sass-spec/spec/core_functions/color/hsl/error"
#[allow(unused)]
use super::rsass;
#[allow(unused)]
use rsass::set_precision;

// Ignoring "five_args.hrx", error tests are not supported yet.

// Ignoring "four_args.hrx", not a single spec.

// Ignoring "one_arg.hrx", not a single spec.

// Ignoring "three_args.hrx", not a single spec.

// Ignoring "two_args.hrx", not a single spec.
